--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,3 +8,14 @@ ul, li {
   padding: 0;
   margin: 0;
 }
+
+.box {
+  display: inline-block;
+  border: solid 1px #000;
+  margin-bottom: 10px;
+  width: 60%;
+}
+
+.box p {
+  word-break: keep-all;
+}
