--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -19,3 +19,23 @@ ul, li {
 .box p {
   word-break: keep-all;
 }
+
+.ConditionInput {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+}
+
+.ConditionInput ul {
+  border: solid 1px #000;
+  margin: 10px;
+}
+
+.searchAndDistance {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  div {
+    margin: 10px;
+  }
+}
