--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -10,6 +10,7 @@ ul, li {
 }
 
 .box {
+
   display: inline-block;
   border: solid 1px #000;
   margin-bottom: 10px;
@@ -38,4 +39,9 @@ ul, li {
   div {
     margin: 10px;
   }
+}
+
+table {
+  margin-left: auto;
+  margin-right: auto;
 }
